--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -33,8 +33,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="25dp"
                     android:src="@mipmap/card_bg_ijk" />
 
 
@@ -260,7 +260,7 @@
                         android:textSize="@dimen/ctv_sizen_14"
                         android:textStyle="bold" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/et_address"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -269,13 +269,21 @@
                         android:layout_toRightOf="@+id/text_tab2"
                         android:background="@color/colorWhite"
                         android:cursorVisible="true"
-                        android:drawableRight="@mipmap/ic_address"
                         android:gravity="center|left"
                         android:hint="请选择门店地址"
                         android:lines="2"
                         android:textColor="@color/black33"
                         android:textCursorDrawable="@null"
                         android:textSize="@dimen/ctv_sizen_13" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/iv_address"
+                        android:padding="10dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:src="@mipmap/ic_address" />
                 </RelativeLayout>
 
                 <View
