--- a/app/src/main/res/layout/activity_addclient.xml
+++ b/app/src/main/res/layout/activity_addclient.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_blg"
@@ -7,221 +8,225 @@
 
     <include layout="@layout/activity_title" />
 
-    <androidx.core.widget.NestedScrollView
+
+    <com.lihang.ShadowLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:fadingEdge="none"
-        android:overScrollMode="never"
-        android:scrollbars="none">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        app:hl_cornerRadius="3dp"
+        app:hl_shadowBackColor="#fff"
+        app:hl_shadowColor="#2A696969"
+        app:hl_shadowLimit="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
-            <LinearLayout
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:background="@drawable/dialog_bg"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp">
+                android:layout_height="45dp">
 
-                <RelativeLayout
+                <TextView
+                    android:id="@+id/text_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="客户姓名"
+                    android:textColor="@color/black33"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+
+                <EditText
+                    android:id="@+id/et_name"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp">
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/text_name"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:gravity="center|right"
+                    android:hint="请您输入客户姓名"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/black33"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/ctv_sizen_14" />
 
-                    <TextView
-                        android:id="@+id/text_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="客户姓名"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
+            </RelativeLayout>
 
-
-                    <EditText
-                        android:id="@+id/et_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toRightOf="@+id/text_name"
-                        android:background="@null"
-                        android:cursorVisible="true"
-                        android:textCursorDrawable="@null"
-                        android:gravity="center|right"
-                        android:hint="请您输入客户姓名"
-                        android:paddingLeft="10dp"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/dive_line" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp">
-
-                    <TextView
-                        android:id="@+id/text_phone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="联系电话"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-
-                    <EditText
-                        android:id="@+id/et_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toRightOf="@+id/text_phone"
-                        android:background="@null"
-                        android:gravity="center|right"
-                        android:cursorVisible="true"
-                        android:textCursorDrawable="@null"
-                        android:hint="请您输入客户电话号码"
-                        android:paddingLeft="10dp"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/dialog_bg"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp">
+                android:layout_height="0.5dp"
+                android:background="@color/dive_line" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp">
-
-                    <TextView
-                        android:id="@+id/text_license"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="车牌号"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-
-                    <EditText
-                        android:id="@+id/et_license"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toRightOf="@+id/text_license"
-                        android:background="@null"
-                        android:cursorVisible="true"
-                        android:textCursorDrawable="@null"
-                        android:gravity="center|right"
-                        android:hint="请您输入车牌号"
-                        android:paddingLeft="10dp"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/dive_line" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp">
-
-                    <TextView
-                        android:id="@+id/text_discern"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="车辆识别代码"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-
-                    <EditText
-                        android:id="@+id/et_discern"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toRightOf="@+id/text_discern"
-                        android:background="@null"
-                        android:cursorVisible="true"
-                        android:textCursorDrawable="@null"
-                        android:gravity="center|right"
-                        android:hint="请您输入车辆识别代码"
-                        android:paddingLeft="10dp"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-                </RelativeLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:background="@color/dive_line" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp">
-
-                    <TextView
-                        android:id="@+id/text_model"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="车辆品牌型号"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-
-                    <EditText
-                        android:id="@+id/et_model"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_toRightOf="@+id/text_model"
-                        android:background="@null"
-                        android:gravity="center|right"
-                        android:cursorVisible="true"
-                        android:textCursorDrawable="@null"
-                        android:hint="请您输入车辆品牌型号"
-                        android:paddingLeft="10dp"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-
-            <Button
-                android:id="@+id/btn_next"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="30dp"
-                android:background="@drawable/next_shape"
-                android:gravity="center"
-                android:text="提交"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/ctv_sizen_15" />
+                android:layout_height="45dp">
+
+                <TextView
+                    android:id="@+id/text_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="联系电话"
+                    android:textColor="@color/black33"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+
+                <EditText
+                    android:id="@+id/et_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/text_phone"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:gravity="center|right"
+                    android:hint="请您输入客户电话号码"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/black33"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+            </RelativeLayout>
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </com.lihang.ShadowLayout>
 
-</RelativeLayout>
+    <com.lihang.ShadowLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        app:hl_cornerRadius="3dp"
+        app:hl_shadowBackColor="#fff"
+        app:hl_shadowColor="#2A696969"
+        app:hl_shadowLimit="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp">
+
+                <TextView
+                    android:id="@+id/text_license"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="车牌号"
+                    android:textColor="@color/black33"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+
+                <EditText
+                    android:id="@+id/et_license"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/text_license"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:gravity="center|right"
+                    android:hint="请您输入车牌号"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/black33"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/dive_line" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp">
+
+                <TextView
+                    android:id="@+id/text_discern"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="车辆识别代码"
+                    android:textColor="@color/black33"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+
+                <EditText
+                    android:id="@+id/et_discern"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/text_discern"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:gravity="center|right"
+                    android:hint="请您输入车辆识别代码"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/black33"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/dive_line" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp">
+
+                <TextView
+                    android:id="@+id/text_model"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="车辆品牌型号"
+                    android:textColor="@color/black33"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+
+                <EditText
+                    android:id="@+id/et_model"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_toRightOf="@+id/text_model"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:gravity="center|right"
+                    android:hint="请您输入车辆品牌型号"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/black33"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+    </com.lihang.ShadowLayout>
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/next_shape"
+        android:gravity="center"
+        android:text="提交"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/ctv_sizen_15" />
+
+</LinearLayout>
