--- a/app/src/main/res/layout/activity_addclient.xml
+++ b/app/src/main/res/layout/activity_addclient.xml
@@ -38,7 +38,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="客户姓名"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/ctv_sizen_14" />
 
 
@@ -52,7 +52,7 @@
                     android:gravity="center|right"
                     android:hint="请您输入客户姓名"
                     android:paddingLeft="10dp"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black7e"
                     android:textCursorDrawable="@null"
                     android:textSize="@dimen/ctv_sizen_14" />
 
@@ -73,7 +73,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="联系电话"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/ctv_sizen_14" />
 
 
@@ -87,7 +87,7 @@
                     android:gravity="center|right"
                     android:hint="请您输入客户电话号码"
                     android:paddingLeft="10dp"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black7e"
                     android:textCursorDrawable="@null"
                     android:textSize="@dimen/ctv_sizen_14" />
 
@@ -123,7 +123,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="车牌号"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/ctv_sizen_14" />
 
 
@@ -137,7 +137,7 @@
                     android:gravity="center|right"
                     android:hint="请您输入车牌号"
                     android:paddingLeft="10dp"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black7e"
                     android:textCursorDrawable="@null"
                     android:textSize="@dimen/ctv_sizen_14" />
 
@@ -148,6 +148,38 @@
                 android:layout_height="0.5dp"
                 android:background="@color/dive_line" />
 
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="里程"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+
+                <EditText
+                    android:id="@+id/et_oss"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:cursorVisible="true"
+                    android:gravity="center|right"
+                    android:hint="请您输入车牌号"
+                    android:paddingLeft="10dp"
+                    android:textColor="@color/black7e"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/ctv_sizen_14" />
+
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/dive_line" />
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="45dp">
@@ -158,7 +190,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="车辆识别代码"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/ctv_sizen_14" />
 
 
@@ -172,7 +204,7 @@
                     android:gravity="center|right"
                     android:hint="请您输入车辆识别代码"
                     android:paddingLeft="10dp"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black7e"
                     android:textCursorDrawable="@null"
                     android:textSize="@dimen/ctv_sizen_14" />
 
@@ -193,7 +225,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="车辆品牌型号"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/ctv_sizen_14" />
 
 
@@ -207,7 +239,7 @@
                     android:gravity="center|right"
                     android:hint="请您输入车辆品牌型号"
                     android:paddingLeft="10dp"
-                    android:textColor="@color/black33"
+                    android:textColor="@color/black7e"
                     android:textCursorDrawable="@null"
                     android:textSize="@dimen/ctv_sizen_14" />
 
