--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -74,7 +74,7 @@
                         android:drawablePadding="10dp"
                         android:gravity="center|left"
                         android:paddingLeft="20dp"
-                        android:text="企业名称"
+                        android:text="门店名称"
                         android:textColor="@color/black"
                         android:textSize="@dimen/ctv_sizen_14"
                         android:textStyle="bold" />
